<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.becpg</groupId>
	<artifactId>becpg-parent</artifactId>
	<packaging>pom</packaging>
	<name>beCPG</name>
	<version>0.1.4</version>
	<description>BeCPG Parent Project</description>

	<organization>
		<name>BeCPG</name>
		<url>http://www.becpg.fr</url>
	</organization>

	<mailingLists>
		<mailingList>
			<name>becpg</name>
			<post>mailing@becpg.fr</post>
		</mailingList>
	</mailingLists>

	<scm>
		<connection>scm:hg:https://www.becpg.fr/hg/becpg</connection>
		<developerConnection>scm:hg:https://${maven.username}@becpg.fr/hg/becpg/</developerConnection>
		<url>https://www.becpg.fr/hg/becpg</url>
	</scm>

	<issueManagement>
		<system>RedMine</system>
		<url>http://www.becpg.fr/redmine</url>
	</issueManagement>

	<licenses>
		<license>
			<name>Licence beCPG</name>
			<url>http://www.becpg.fr/licenses/LICENSE-2.0</url>
			<comments>Copyright (C) 2010-2011 beCPG. All rights reserved.</comments>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>matthieu.laborie</id>
			<name>Matthieu Laborie</name>
			<email>matthieu.laborie@becpg.fr</email>
			<timezone>1</timezone>
			<organization>BecPG</organization>
			<organizationUrl>http://www.becpg.fr</organizationUrl>
		</developer>
		<developer>
			<id>philippe.quere</id>
			<name>Philippe Quéré</name>
			<email>philippe.quere@becpg.fr</email>
			<timezone>1</timezone>
			<organization>BecPG</organization>
			<organizationUrl>http://www.becpg.fr</organizationUrl>
		</developer>
	</developers>


	<properties>
	    <!-- Test -->
		<alfresco.data.location>/home/quere/Documents/beCPG/dev/workspace/becpg/becpg_data</alfresco.data.location>
		<alfresco.db.host>localhost</alfresco.db.host>
		<alfresco.db.name>becpg_34d_dev</alfresco.db.name>
		<alfresco.db.username>becpg</alfresco.db.username>
		<alfresco.db.password>becpg</alfresco.db.password>
		<alfresco.server>/opt/alfresco-4.0.d</alfresco.server>
		<!-- OLAP -->
		<olap.server>/opt/alfresco-4.0.d</olap.server>
		<olap.db.host>localhost</olap.db.host>
		<olap.db.name>becpg_34d_demo</olap.db.name>
		<olap.db.username>becpg</olap.db.username>
		<olap.db.password>becpg</olap.db.password>
		<olap.db.port>3306</olap.db.port>
		<!-- Log -->
		<webapp.log.dir>/var/log/alfresco</webapp.log.dir>
		<!-- Module specific build time properties -->
		<module.log.level>info</module.log.level>
		<!-- build -->
		<alfresco.version>4.0.d</alfresco.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	 <repositories>
		<repository>
			<id>alfresco-public-snapshots</id>
			<url>http://maven.alfresco.com/nexus/content/groups/public-snapshots</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>alfresco-public</id>
			<url>http://maven.alfresco.com/nexus/content/groups/public</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>alfresco-public</id>
			<url>http://maven.alfresco.com/nexus/content/groups/public</url>
		</pluginRepository>
		<pluginRepository>
			<id>alfresco-public-snapshots</id>
			<url>http://maven.alfresco.com/nexus/content/groups/public-snapshots</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<build>
		<plugins>
		<!-- 	<plugin>
				<artifactId>maven-nosnapshot-plugin</artifactId>
				<groupId>com.sourcesense.maven</groupId>
				<version>0.0.6</version>
				<executions>
					<execution>
						<id>default</id>
						<phase>initialize</phase>
						<goals>
							<goal>strip</goal>
						</goals>
					</execution>
				</executions>
			</plugin> 
		 	<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.0-beta-2</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<revisionOnScmFailure>1</revisionOnScmFailure>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
				</configuration>
			</plugin> -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
			   	<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12</version>
				<configuration>
					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.alfresco.maven.plugin</groupId>
				<artifactId>maven-amp-plugin</artifactId>
				<version>3.0.2</version>
				<extensions>true</extensions>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
					<overlays>
						<!-- This sample adds records management module in the finally built 
							AMP <overlay> <groupId>org.org.alfresco</groupId> <artifactId>recordsmanagement</artifactId> 
							<version>2.1.0</version> <type>amp</type> </overlay> -->
						<!-- The current AMP is always last in order to overwrite other modules' 
							modules.properties <overlay></overlay> -->
					</overlays>
				</configuration>
			</plugin>
			
		</plugins>
	</build>
	
	<modules>
		<module>becpg-bootstrap/alfresco-sdk</module>
		<module>becpg-bootstrap/birt-sdk</module>
		<module>alfresco-patch</module>
		<module>becpg-core</module>
		<module>becpg-share</module>
		<module>becpg-olap</module>
		<module>distribution</module>
  </modules>

	<profiles>
		<profile>
			<id>dev-tours</id>
			<properties>
			    <!-- Test -->
				<alfresco.data.location>/opt/becpg/workspace/becpg/alf_data</alfresco.data.location>
				<alfresco.db.host>localhost</alfresco.db.host>
				<alfresco.db.name>becpg_test</alfresco.db.name>
				<alfresco.db.username>becpg</alfresco.db.username>
				<alfresco.db.password>becpg</alfresco.db.password>
				<alfresco.server>/opt/becpg/alfresco-4.0.d</alfresco.server>
				<!-- OLAP -->
				<olap.server>/opt/becpg/alfresco-4.0.d</olap.server>
				<olap.db.host>localhost</olap.db.host>
				<olap.db.name>becpg_demo</olap.db.name>
				<olap.db.username>becpg</olap.db.username>
				<olap.db.password>becpg</olap.db.password>
				<!-- Log -->
				<webapp.log.dir>/tmp</webapp.log.dir>
			</properties>
		</profile>
		<profile>
			<id>sva-int</id>
			<properties>
				<alfresco.data.location>/opt/alfresco-4.0.d-sva/becpg_data</alfresco.data.location>
				<alfresco.db.name>becpg_34d_sva_int</alfresco.db.name>
				<alfresco.db.username>becpg</alfresco.db.username>
				<alfresco.db.password>becpg</alfresco.db.password>
				<!-- OLAP -->
				<olap.server>/opt/alfresco-4.0.d-sva</olap.server>
				<olap.db.host>localhost</olap.db.host>
				<olap.db.name>becpg_34d_sva_int</olap.db.name>
				<olap.db.username>becpg</olap.db.username>
				<olap.db.password>becpg</olap.db.password>
			</properties>
		</profile>
		<profile>
			<id>sva-prod</id>
			<properties>				
				<alfresco.data.location>/mnt/data/becpg/alf_data</alfresco.data.location>
				<alfresco.db.name>beCPG</alfresco.db.name>
				<alfresco.db.username>beCPG</alfresco.db.username>
				<alfresco.db.password>becpgSVA</alfresco.db.password>
				<!-- OLAP -->
				<olap.server>/opt/alfresco-4.0.d</olap.server>
				<olap.db.host>localhost</olap.db.host>
				<olap.db.name>beCPG</olap.db.name>
				<olap.db.username>beCPG</olap.db.username>
				<olap.db.password>becpgSVA</olap.db.password>
			</properties>
		</profile>
	</profiles>
</project>